# darlacow

./: .gitignore  Cargo.toml  README.html  README.md  TODO.md  gh.html  torpi
db/: sequences.db
led_matrix/: README.md  led_matrix.ino
scripts/: blue.sh  build_and_install.sh  start_audio.sh  start_server.sh
songs/: West Side Story [10] Intermission.m4a  West Side Story [11] I feel Pretty.m4a  West Side Story [12] One hand, One heart.m4a  West Side Story [13] Quintet.m4a  West Side Story [14] The rumble.m4a  West Side Story [15] Somewhere.m4a  West Side Story [16] Cool.m4a  West Side Story [3] Jet song.m4a  West Side Story [4] Something's coming.m4a  West Side Story [6] Maria.m4a  West Side Story [9] Gee, Officer Krupke.m4a
src/: main.rs
static/: gh.html  table.js  w3script.js
templates/: base.html.tera  big-header.html.tera  edit.html.tera  home.html.tera  links.html.tera  logs.html.tera  nav.html.tera  raw.html.tera  small-header.html.tera  test.html.tera
