[package]
name = "darlacow"
version = "0.1.0"
authors = ["maxtkc <maxkatzchristy@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpd = "0.1"
rppal = "0.11.0"

[dependencies.rocket_dyn_templates]
version = "0.1"
features = ["tera"]

[dependencies.serialport]
default-features = false
version = "3.1"

# [dependencies.rocket_contrib]
# default-features = false
# features = ["serve", "tera_templates"]
# version = "0.4"

[dependencies.rusqlite]
version = "0.16"
default-features = false
features = ["bundled"]
